// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Details Device > Renders the component 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default elevation-0 v-card--variant-elevated mt-2 border rounded bg-background">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-title pa-4 d-flex align-center justify-space-between bg-v-theme-surface">
    <div class="d-flex align-center ml-2">
      <div data-v-35d3a308="" class="v-row d-flex align-center flex-column">
        <div data-v-35d3a308="" class="v-btn-group v-btn-group--horizontal v-btn-group--divided v-theme--light v-btn-group--density-compact"><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" data-test="connect-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Offline</span>
            <!---->
            <!---->
          </button><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-1" aria-owns="v-menu-v-1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-triangle-small-down mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
      <!----><span class="ml-6">39-5e-2a</span>
    </div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-plain border rounded bg-v-theme-background" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-3" aria-owns="v-menu-v-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-format-list-bulleted mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-card-text pa-4 pt-0">
    <div class="v-row py-3">
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-uid-field">
          <div class="item-title"> UID: </div>
          <p class="text-truncate">a582b47a42d</p>
        </div>
        <div data-test="device-mac-field">
          <div class="item-title"> MAC: </div><code>00:00:00:00:00:00</code>
        </div>
        <div data-test="device-pretty-name-field">
          <div class="item-title"> Operating System: </div>
          <div><i data-test="device-icon" class="fl-linuxmint mr-1 mr-2" style="font-size: 20px;"></i><span>Linux Mint 19.3</span></div>
        </div>
      </div>
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-version-field">
          <div class="item-title"> Agent Version: </div>
          <p></p>
        </div>
        <div data-test="device-tags-field">
          <div class="item-title"> Tags: </div>
          <div><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false" aria-describedby="v-tooltip-v-5"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">test-tag</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div data-test="device-last-seen-field">
          <div class="item-title"> Last Seen: </div>
          <p>Wednesday, May 20th 2020, 6:58:53 pm</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`Details Device > Renders the component when device has no last seen date 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default elevation-0 v-card--variant-elevated mt-2 border rounded bg-background">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-title pa-4 d-flex align-center justify-space-between bg-v-theme-surface">
    <div class="d-flex align-center ml-2">
      <div data-v-35d3a308="" class="v-row d-flex align-center flex-column">
        <div data-v-35d3a308="" class="v-btn-group v-btn-group--horizontal v-btn-group--divided v-theme--light v-btn-group--density-compact"><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" data-test="connect-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Offline</span>
            <!---->
            <!---->
          </button><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-1" aria-owns="v-menu-v-1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-triangle-small-down mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
      <!----><span class="ml-6">39-5e-2a</span>
    </div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-plain border rounded bg-v-theme-background" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-3" aria-owns="v-menu-v-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-format-list-bulleted mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-card-text pa-4 pt-0">
    <div class="v-row py-3">
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-uid-field">
          <div class="item-title"> UID: </div>
          <p class="text-truncate">a582b47a42d</p>
        </div>
        <div data-test="device-mac-field">
          <div class="item-title"> MAC: </div><code>00:00:00:00:00:00</code>
        </div>
        <div data-test="device-pretty-name-field">
          <div class="item-title"> Operating System: </div>
          <div><i data-test="device-icon" class="fl-linuxmint mr-1 mr-2" style="font-size: 20px;"></i><span>Linux Mint 19.3</span></div>
        </div>
      </div>
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-version-field">
          <div class="item-title"> Agent Version: </div>
          <p></p>
        </div>
        <div data-test="device-tags-field">
          <div class="item-title"> Tags: </div>
          <div><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false" aria-describedby="v-tooltip-v-5"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">test-tag</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div data-test="device-last-seen-field">
          <div class="item-title"> Last Seen: </div>
          <p>No date found</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`Details Device > Renders the component when device has no tags 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default elevation-0 v-card--variant-elevated mt-2 border rounded bg-background">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-title pa-4 d-flex align-center justify-space-between bg-v-theme-surface">
    <div class="d-flex align-center ml-2">
      <div data-v-35d3a308="" class="v-row d-flex align-center flex-column">
        <div data-v-35d3a308="" class="v-btn-group v-btn-group--horizontal v-btn-group--divided v-theme--light v-btn-group--density-compact"><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" data-test="connect-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Offline</span>
            <!---->
            <!---->
          </button><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-1" aria-owns="v-menu-v-1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-triangle-small-down mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
      <!----><span class="ml-6">39-5e-2a</span>
    </div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-plain border rounded bg-v-theme-background" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-3" aria-owns="v-menu-v-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-format-list-bulleted mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-card-text pa-4 pt-0">
    <div class="v-row py-3">
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-uid-field">
          <div class="item-title"> UID: </div>
          <p class="text-truncate">a582b47a42d</p>
        </div>
        <div data-test="device-mac-field">
          <div class="item-title"> MAC: </div><code>00:00:00:00:00:00</code>
        </div>
        <div data-test="device-pretty-name-field">
          <div class="item-title"> Operating System: </div>
          <div><i data-test="device-icon" class="fl-linuxmint mr-1 mr-2" style="font-size: 20px;"></i><span>Linux Mint 19.3</span></div>
        </div>
      </div>
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-version-field">
          <div class="item-title"> Agent Version: </div>
          <p></p>
        </div>
        <!--v-if-->
        <div data-test="device-last-seen-field">
          <div class="item-title"> Last Seen: </div>
          <p>Wednesday, May 20th 2020, 6:58:53 pm</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`Details Device > Renders the component when device is offline 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default elevation-0 v-card--variant-elevated mt-2 border rounded bg-background">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-title pa-4 d-flex align-center justify-space-between bg-v-theme-surface">
    <div class="d-flex align-center ml-2">
      <div data-v-35d3a308="" class="v-row d-flex align-center flex-column">
        <div data-v-35d3a308="" class="v-btn-group v-btn-group--horizontal v-btn-group--divided v-theme--light v-btn-group--density-compact"><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" data-test="connect-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Offline</span>
            <!---->
            <!---->
          </button><button data-v-35d3a308="" type="button" class="v-btn v-btn--disabled v-btn--flat v-btn--icon v-theme--light text-normal v-btn--density-compact v-btn--size-default v-btn--variant-outlined" style="height: auto;" disabled="" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-1" aria-owns="v-menu-v-1"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-triangle-small-down mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
            <!---->
            <!---->
          </button>
          <!---->
        </div>
      </div>
      <!---->
      <!---->
      <!---->
      <!----><span class="ml-6">39-5e-2a</span>
    </div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-plain border rounded bg-v-theme-background" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-3" aria-owns="v-menu-v-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-format-list-bulleted mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-card-text pa-4 pt-0">
    <div class="v-row py-3">
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-uid-field">
          <div class="item-title"> UID: </div>
          <p class="text-truncate">a582b47a42d</p>
        </div>
        <div data-test="device-mac-field">
          <div class="item-title"> MAC: </div><code>00:00:00:00:00:00</code>
        </div>
        <div data-test="device-pretty-name-field">
          <div class="item-title"> Operating System: </div>
          <div><i data-test="device-icon" class="fl-linuxmint mr-1 mr-2" style="font-size: 20px;"></i><span>Linux Mint 19.3</span></div>
        </div>
      </div>
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-version-field">
          <div class="item-title"> Agent Version: </div>
          <p></p>
        </div>
        <div data-test="device-tags-field">
          <div class="item-title"> Tags: </div>
          <div><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false" aria-describedby="v-tooltip-v-5"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">test-tag</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div data-test="device-last-seen-field">
          <div class="item-title"> Last Seen: </div>
          <p>Wednesday, May 20th 2020, 6:58:53 pm</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`Details Device > Renders the component when device status is not accepted 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default elevation-0 v-card--variant-elevated mt-2 border rounded bg-background">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <div class="v-card-title pa-4 d-flex align-center justify-space-between bg-v-theme-surface">
    <div class="d-flex align-center ml-2">
      <!--v-if--><span class="ml-6">39-5e-2a</span>
    </div><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-plain border rounded bg-v-theme-background" aria-haspopup="menu" aria-expanded="false" aria-controls="v-menu-v-3" aria-owns="v-menu-v-3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-format-list-bulleted mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-card-text pa-4 pt-0">
    <div class="v-row py-3">
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-uid-field">
          <div class="item-title"> UID: </div>
          <p class="text-truncate">a582b47a42d</p>
        </div>
        <div data-test="device-mac-field">
          <div class="item-title"> MAC: </div><code>00:00:00:00:00:00</code>
        </div>
        <div data-test="device-pretty-name-field">
          <div class="item-title"> Operating System: </div>
          <div><i data-test="device-icon" class="fl-linuxmint mr-1 mr-2" style="font-size: 20px;"></i><span>Linux Mint 19.3</span></div>
        </div>
      </div>
      <div class="v-col-md-6 v-col-12 my-0 py-0">
        <div data-test="device-version-field">
          <div class="item-title"> Agent Version: </div>
          <p></p>
        </div>
        <div data-test="device-tags-field">
          <div class="item-title"> Tags: </div>
          <div><span class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal mr-2" draggable="false" aria-describedby="v-tooltip-v-5"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">test-tag</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </div>
        </div>
        <div data-test="device-last-seen-field">
          <div class="item-title"> Last Seen: </div>
          <p>Wednesday, May 20th 2020, 6:58:53 pm</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;

exports[`Details Device > Renders the component when deviceIsEmpty is true 1`] = `
"<div class="d-flex pa-0 align-center">
  <h1>Device Details</h1>
</div>
<div class="v-card v-theme--light v-card--density-default v-card--variant-elevated mt-2 pa-4 bg-v-theme-surface">
  <!---->
  <div class="v-card__loader">
    <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
      <!---->
      <div class="v-progress-linear__background"></div>
      <div class="v-progress-linear__buffer" style="width: 0%;"></div>
      <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
        <div class="v-progress-linear__indeterminate">
          <div class="v-progress-linear__indeterminate long"></div>
          <div class="v-progress-linear__indeterminate short"></div>
        </div>
      </transition-stub>
      <!---->
    </div>
  </div>
  <!---->
  <!---->
  <p class="text-center"> Something is wrong, try again ! </p>
  <!---->
  <!----><span class="v-card__underlay"></span>
</div>"
`;
